Contact Section mobile font size fix

--- a/src/components/ContactSection/ContactSection.module.css
+++ b/src/components/ContactSection/ContactSection.module.css
@@ -196,9 +196,3 @@
     margin-right: auto;
   }
 }
-
-@media screen and (max-width: 568px) {
-  .heading {
-    font-size: 4rem;
-  }
-}
